[package]
name = "diing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "diing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = [ "init-if-needed" ] }
anchor-spl = "0.27.0"
spl-token = "3.2.0"
hex = "0.4.3"
sha2 = { version = "0.10", default-features = false }